# EIVU

./: .buffer.cpp.swp  .buffer.hpp.swp  .clt.cpp.swp  .gitignore  .nfs0000000000cf45eb00073b9b  .nfs000000000193994200069835  .nfs000000000193994300069836  CMakeLists.txt  README.md  a.out  buffer.cpp  buffer.hpp  buffer_impl.hpp  buffer_pool.hpp  buffer_pool_impl.hpp  cbuffer.hpp  clt.cpp  clt.out  cpacket.hpp  cpuinfo.hpp  crun.sh  gmon.out  guest.cpp  hbuffer.hpp  header.hpp  log  log_vec  makefile  mbuffer.hpp  nf.cpp  option.hpp  packet.cpp  packet.hpp  random.hpp  recv.cpp  rx.cpp  shm.cpp  shm.hpp  srun.sh  srv.cpp  (+7 more)
buffer_pool/: buffer_pool_impl_queue.hpp  buffer_pool_impl_stack.hpp
build2/: clt.out  recv.out  run.sh
clear/: a.out  clear.cpp
esc/: buffer.cpp  buffer.hpp  clt.cpp  clt.out  makefile  packet.cpp  packet.hpp  shm.hpp  srv.cpp  srv.out
esc/tes/: shm
esc/tes/comp/: shm2.cpp
eval/: evaluation.html  results.html
eval/server1/nf/: results.html
eval/server1/rx/: results.html
eval/server1/tx/: results.html
eval/server2/nf/: results.html
eval/server2/rx/: results.html
ratio/: calc.py  ratio.txt
ratio/test/: a.py
result/: .nfs00000000013bbb8900073bb4  calc.py  log  log2  log_17  log_before  log_perf  pcalc.py  result_perf
run/: a0.cpp  a0.out  a1.cpp  a1.out  a2.cpp  a2.out  cpuinfo.hpp  header.hpp  perf.sh  run.sh
shells/: copy.sh  copybin.sh  init.sh  link.sh  perfrun.sh  run.sh  singlerun.sh  statrun.sh
shells/_results/: link.sh
tes/: shm2  tes
tes/comp/: shm.cpp
th/: a.cpp  a.hpp  a.out
util/: bindcpu.hpp  option.hpp  shm.cpp  shm.hpp
(+1717 files in other folders)
